src/scss/common/_base.scss
/* ... */
:root.minimal {
  .chapter-group__list-item {
    background: none;
    border-radius: 0;
    border-bottom: 1px solid var(--layout-color-separator);
  }
}

.notice {
  display: flex;
  align-items: flex-start;
  gap: .5rem;
  background: var(--infobox-background);
  color: var(--fg-600);
  font-size: var(--fs-xs);
  font-weight: 400;
  line-height: 1.3;
  letter-spacing: 0;
  padding: .5rem;
  border-radius: var(--layout-border-radius-small);

  > :is(i, .icon) {
    flex-shrink: 0;
    line-height: inherit;
    text-align: center;
    min-width: 1.5rem;
  }

  > div {
    flex-grow: 1;
  }

  &._warning {
    color: var(--warning-caption);
    background: var(--warning);
  }
}

#wpadminbar {
  z-index: 100 !important;
  contain: layout size;
  transform: translateZ(0); // Improve performance
}

.icon,
.fa-solid,
.fa-regular {
  contain: style paint; // Improve performance
}

.list-button {
  cursor: pointer;
  color: var(--fg-900);
  font-size: var(--fs-s);
  line-height: 1;
  padding: 5px 6px 4px;
  transition: color var(--transition-duration), opacity var(--transition-duration);

  &:hover {
    color: var(--fg-400);
  }

  &._on {
    ._off {
      display: none;
    }
  }

  &._off {
    ._on {
      display: none;
    }
  }

  &._text {
    font-size: var(--fs-dxs);
    font-weight: 600;
    line-height: 1.2;
    letter-spacing: .02em;
    padding: 4px 0;

    .popup-menu {
      --vertical-offset: -4px;
    }
  }
}

.sort-order-filter {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 8px;
  margin: 2rem 0 -0.5rem;
}

